name:                h99
version:             0.1.0
synopsis:            Answers for H-99.
description:         Please see README.md
homepage:            https://github.com/githubuser/h99#readme
license:             BSD3
license-file:        LICENSE
author:              TANIGUCHI Kohei
maintainer:          a.d.xvii.kal.mai@gmail.com
copyright:           2016 TANIGUCHI Kohei
category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     H99
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wimplicit-lift
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wmissing-import-lists
    -Wmissing-kind-signatures
    -Wmissing-local-signatures
    -Wmonomorphism-restriction
    -Wpartial-fields
    -Wredundant-constraints
    -Wsafe
    -Wunticked-promoted-constructors
    -Wunused-packages
    -Wunused-type-patterns
    -fdefer-typed-holes

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             doctest.hs
  build-depends:       base
                     , doctest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/h99
